feat: migrate to solid-js

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -10,6 +10,12 @@ packageExtensions:
     peerDependencies:
       "@babel/core": "*"
       webpack: "*"
+  "babel-plugin-jsx-dom-expressions@*":
+    peerDependencies:
+      "@babel/core": "*"
+  "babel-preset-solid@*":
+    peerDependencies:
+      "@babel/core": "*"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
