--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,7 @@
     "isolatedModules": false,
     "strict": true,
     "jsx": "preserve",
-    "jsxImportSource": "preact",
-    "jsxFactory": "h",
-    "jsxFragmentFactory": "Fragment",
+    "jsxImportSource": "solid-js",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
