--- a/package.json
+++ b/package.json
@@ -22,17 +22,15 @@
     "@linaria/core": "^3.0.0-beta.1",
     "core-js": "^3.9.0",
     "date-fns": "^2.17.0",
-    "preact": "^10.5.12"
+    "solid-js": "^0.24.7"
   },
   "devDependencies": {
     "@babel/core": "^7.13.1",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.0",
     "@babel/plugin-proposal-optional-chaining": "^7.13.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-react-constant-elements": "^7.12.13",
     "@babel/plugin-transform-runtime": "^7.13.7",
     "@babel/preset-env": "^7.13.5",
-    "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
     "@linaria/babel-preset": "^3.0.0-beta.1",
     "@linaria/shaker": "^3.0.0-beta.1",
@@ -44,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
     "babel-loader": "^8.2.2",
+    "babel-preset-solid": "^0.24.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.1.0",
@@ -51,13 +50,11 @@
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-standard": "^16.0.2",
-    "eslint-config-standard-react": "^11.0.1",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.22.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.9",
