chore: add stylelint

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build:production": "NODE_ENV=production webpack --env production --progress",
     "analyze-bundle": "NODE_ENV=production webpack --env production --analyze",
     "dev": "NODE_ENV=development webpack serve",
-    "lint": "eslint --ext .js,.ts,.tsx src",
+    "test": "run-p lint:* typecheck --aggregate-output",
+    "lint": "run-p lint:* --aggregate-output",
+    "lint:eslint": "eslint --ext .js,.ts,.tsx src",
+    "lint:stylelint": "stylelint \"src/**/*.{css,ts,tsx}\"",
     "typecheck": "tsc --noEmit --pretty --project ."
   },
   "sideEffects": [
@@ -33,6 +36,7 @@
     "@babel/preset-typescript": "^7.12.13",
     "@linaria/babel-preset": "^3.0.0-beta.1",
     "@linaria/shaker": "^3.0.0-beta.1",
+    "@linaria/stylelint": "^3.0.0-beta.1",
     "@linaria/webpack-loader": "^3.0.0-beta.1",
     "@principalstudio/html-webpack-inject-preload": "^1.2.3",
     "@types/chrome": "^0.0.129",
@@ -57,7 +61,12 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.0.0",
     "mini-css-extract-plugin": "^1.3.5",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
+    "stylelint": "^13.10.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-prettier": "^1.1.2",
     "terser-webpack-plugin": "^5.1.1",
     "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
