--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,13 +1,18 @@
-yarnPath: ".yarn/releases/yarn-berry.cjs"
 packageExtensions:
   "@linaria/babel-preset@*":
     dependencies:
-      "@babel/plugin-transform-modules-commonjs": "*"
       "@babel/plugin-proposal-export-namespace-from": "*"
+      "@babel/plugin-transform-modules-commonjs": "*"
   "@linaria/stylelint@*":
     peerDependencies:
       "@babel/core": "*"
   "@linaria/webpack-loader@*":
     peerDependencies:
       "@babel/core": "*"
-      "webpack": "*"
+      webpack: "*"
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
+
+yarnPath: .yarn/releases/yarn-sources.cjs
