--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@linaria/webpack-loader": "^3.0.0-beta.1",
     "@principalstudio/html-webpack-inject-preload": "^1.2.4",
     "@types/chrome": "^0.0.133",
+    "@types/node": "^14.14.31",
     "@types/use-subscription": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
@@ -47,6 +48,7 @@
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.1.0",
     "css-minimizer-webpack-plugin": "^1.2.0",
+    "dotenv-webpack": "^6.0.2",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-standard": "^16.0.2",
