--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
-    "file-loader": "^6.2.0",
+    "html-minimizer-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.5.1",
     "npm-run-all": "^4.1.5",
@@ -68,7 +68,6 @@
     "stylelint-prettier": "^1.2.0",
     "terser-webpack-plugin": "^5.1.1",
     "typescript": "^4.2.4",
-    "url-loader": "^4.1.1",
     "webpack": "^5.36.0",
     "webpack-bundle-analyzer": "^4.4.1",
     "webpack-cli": "^4.6.0",
