chore: replace webpack with vite

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,5 @@
+nodeLinker: pnp
+
 packageExtensions:
   "@linaria/babel-preset@*":
     dependencies:
@@ -6,16 +8,16 @@ packageExtensions:
   "@linaria/stylelint@*":
     peerDependencies:
       "@babel/core": "*"
-  "@linaria/webpack-loader@*":
+  babel-plugin-jsx-dom-expressions@*:
     peerDependencies:
       "@babel/core": "*"
-      webpack: "*"
-  "babel-plugin-jsx-dom-expressions@*":
+  babel-preset-solid@*:
     peerDependencies:
       "@babel/core": "*"
-  "babel-preset-solid@*":
+  vite-plugin-linaria-styled@*:
     peerDependencies:
       "@babel/core": "*"
+      rollup: "*"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
