--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build:development": "NODE_ENV=development webpack",
-    "build:production": "NODE_ENV=production webpack --env production --progress",
-    "analyze-bundle": "NODE_ENV=production webpack --env production --analyze",
-    "dev": "NODE_ENV=development webpack serve",
+    "build": "NODE_ENV=production vite build",
     "test": "run-p \"lint:*\" typecheck --aggregate-output",
     "lint": "run-p \"lint:*\" --aggregate-output",
     "lint:eslint": "eslint --ext .js,.ts,.tsx src",
@@ -15,64 +12,45 @@
     "typecheck": "tsc --noEmit --pretty --project ."
   },
   "sideEffects": [
+    "src/components/Layout/components/Fonts/*",
     "*.css"
   ],
   "dependencies": {
-    "@babel/runtime": "^7.13.17",
-    "@linaria/core": "^3.0.0-beta.3",
-    "core-js": "^3.11.1",
-    "date-fns": "^2.21.1",
+    "@linaria/core": "^3.0.0-beta.4",
+    "@yarnpkg/pnpify": "^3.0.0-rc.3",
+    "core-js": "^3.13.1",
+    "date-fns": "^2.22.1",
     "solid-js": "^0.26.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.16",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.8",
-    "@babel/plugin-proposal-optional-chaining": "^7.13.12",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-typescript": "^7.13.0",
-    "@linaria/babel-preset": "^3.0.0-beta.3",
-    "@linaria/shaker": "^3.0.0-beta.3",
-    "@linaria/stylelint": "^3.0.0-beta.3",
-    "@linaria/webpack-loader": "^3.0.0-beta.3",
-    "@principalstudio/html-webpack-inject-preload": "^1.2.7",
-    "@types/chrome": "^0.0.135",
-    "@types/node": "^15.0.1",
+    "@babel/core": "^7.14.3",
+    "@linaria/shaker": "^3.0.0-beta.4",
+    "@linaria/stylelint": "^3.0.0-beta.4",
+    "@types/chrome": "^0.0.144",
+    "@types/node": "^15.6.2",
     "@types/use-subscription": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "babel-loader": "^8.2.2",
-    "babel-preset-solid": "^0.26.5",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^8.1.1",
-    "css-loader": "^5.2.4",
-    "css-minimizer-webpack-plugin": "^2.0.0",
-    "dotenv-webpack": "^7.0.2",
-    "eslint": "^7.25.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard": "^16.0.3",
     "eslint-config-standard-with-typescript": "^20.0.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "html-minimizer-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^5.3.1",
-    "mini-css-extract-plugin": "^1.5.1",
+    "eslint-plugin-promise": "^4",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
-    "stylelint": "^13.13.0",
+    "prettier": "^2.3.0",
+    "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-prettier": "^1.2.0",
-    "terser-webpack-plugin": "^5.1.1",
-    "typescript": "^4.2.4",
-    "webpack": "^5.36.0",
-    "webpack-bundle-analyzer": "^4.4.1",
-    "webpack-cli": "^4.6.0",
-    "webpack-config-utils": "^2.3.1",
-    "webpack-dev-server": "^3.11.2"
+    "typescript": "^4.3.2",
+    "vite": "^2.3.6",
+    "vite-plugin-chrome-extension": "^0.0.7",
+    "vite-plugin-linaria-styled": "^1.0.2",
+    "vite-plugin-solid": "^1.8.0"
   },
   "optionalDependencies": {
     "eslint-import-resolver-node": "*",
