--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-prettier": "^1.2.0",
+    "stylis": "^3",
     "typescript": "^4.3.2",
     "vite": "^2.3.6",
     "vite-plugin-chrome-extension": "^0.0.7",
@@ -51,7 +52,6 @@
     "vite-plugin-solid": "^1.8.0"
   },
   "optionalDependencies": {
-    "eslint-import-resolver-node": "*",
-    "stylis": "^3"
+    "eslint-import-resolver-node": "*"
   }
 }
