--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
   ],
   "dependencies": {
     "@linaria/core": "^3.0.0-beta.4",
-    "@yarnpkg/pnpify": "^3.0.0-rc.3",
+    "@yarnpkg/pnpify": "^3.0.0-rc.7",
     "date-fns": "^2.22.1",
     "solid-js": "^0.26.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@linaria/shaker": "^3.0.0-beta.4",
-    "@linaria/stylelint": "^3.0.0-beta.4",
-    "@types/chrome": "^0.0.144",
-    "@types/node": "^15.6.2",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
+    "@babel/core": "^7.14.6",
+    "@linaria/rollup": "^3.0.0-beta.7",
+    "@linaria/shaker": "^3.0.0-beta.7",
+    "@linaria/stylelint": "^3.0.0-beta.7",
+    "@types/chrome": "^0.0.145",
+    "@types/node": "^15.12.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^7.27.0",
+    "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-config-standard-with-typescript": "^20.0.0",
@@ -39,19 +40,17 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^4",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.3.0",
+    "prettier": "^2.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-prettier": "^1.2.0",
     "stylis": "^3",
-    "typescript": "^4.3.2",
-    "vite": "^2.3.6",
-    "vite-plugin-chrome-extension": "^0.0.7",
-    "vite-plugin-linaria-styled": "^1.0.2",
-    "vite-plugin-solid": "^1.8.0"
+    "typescript": "^4.3.4",
+    "vite": "^2.3.8",
+    "vite-plugin-solid": "^1.9.0"
   },
   "optionalDependencies": {
-    "eslint-import-resolver-node": "*"
+    "eslint-import-resolver-node": "^0.3.4"
   }
 }
