--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@linaria/core": "^3.0.0-beta.4",
     "@yarnpkg/pnpify": "^3.0.0-rc.7",
     "date-fns": "^2.22.1",
-    "solid-js": "^0.26.5"
+    "solid-js": "^1.0.0-rc.9"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -48,7 +48,7 @@
     "stylis": "^3",
     "typescript": "^4.3.4",
     "vite": "^2.3.8",
-    "vite-plugin-solid": "^1.9.0"
+    "vite-plugin-solid": "^2.0.0-rc.3"
   },
   "optionalDependencies": {
     "eslint-import-resolver-node": "^0.3.4"
