--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "dev": "vite",
     "build": "NODE_ENV=production vite build",
     "test": "run-p \"lint:*\" typecheck --aggregate-output",
     "lint": "run-p \"lint:*\" --aggregate-output",
@@ -16,22 +17,25 @@
     "*.css"
   ],
   "dependencies": {
+    "@felte/solid": "^0.1.8",
     "@linaria/core": "^3.0.0-beta.4",
-    "@yarnpkg/pnpify": "^3.0.0-rc.7",
-    "date-fns": "^2.22.1",
-    "solid-js": "^1.0.0"
+    "date-fns": "^2.23.0",
+    "focus-trap": "^6.6.0",
+    "polished": "^4.1.3",
+    "solid-js": "^1.0.5",
+    "solid-transition-group": "^0.0.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
+    "@babel/core": "^7.14.8",
     "@linaria/rollup": "^3.0.0-beta.7",
-    "@linaria/shaker": "^3.0.0-beta.7",
+    "@linaria/shaker": "^3.0.0-beta.10",
     "@linaria/stylelint": "^3.0.0-beta.7",
-    "@types/chrome": "^0.0.145",
+    "@types/chrome": "^0.0.148",
     "@types/node": "^15.14.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^7.29.0",
+    "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-config-standard-with-typescript": "^20.0.0",
@@ -47,9 +51,9 @@
     "stylelint-prettier": "^1.2.0",
     "stylis": "^3",
     "typescript": "^4.3.5",
-    "vite": "^2.3.8",
+    "vite": "^2.4.4",
     "vite-plugin-html": "^2.0.7",
-    "vite-plugin-solid": "^2.0.0"
+    "vite-plugin-solid": "^2.0.1"
   },
   "optionalDependencies": {
     "eslint-import-resolver-node": "^0.3.4"
