--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
+    "resolveJsonModule": true,
     "strict": true,
     "target": "esnext",
     "paths": {
