--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "stylis": "^3",
     "typescript": "^4.3.4",
     "vite": "^2.3.8",
+    "vite-plugin-html": "^2.0.7",
     "vite-plugin-solid": "^2.0.0-rc.3"
   },
   "optionalDependencies": {
