--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@linaria/core": "^3.0.0-beta.4",
     "@yarnpkg/pnpify": "^3.0.0-rc.7",
     "date-fns": "^2.22.1",
-    "solid-js": "^1.0.0-rc.9"
+    "solid-js": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -27,9 +27,9 @@
     "@linaria/shaker": "^3.0.0-beta.7",
     "@linaria/stylelint": "^3.0.0-beta.7",
     "@types/chrome": "^0.0.145",
-    "@types/node": "^15.12.4",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
+    "@types/node": "^15.14.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
@@ -40,16 +40,16 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^4",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.3.1",
+    "prettier": "^2.3.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-prettier": "^1.2.0",
     "stylis": "^3",
-    "typescript": "^4.3.4",
+    "typescript": "^4.3.5",
     "vite": "^2.3.8",
     "vite-plugin-html": "^2.0.7",
-    "vite-plugin-solid": "^2.0.0-rc.3"
+    "vite-plugin-solid": "^2.0.0"
   },
   "optionalDependencies": {
     "eslint-import-resolver-node": "^0.3.4"
