chore: upgrade packages

--- a/package.json
+++ b/package.json
@@ -18,44 +18,45 @@
   ],
   "dependencies": {
     "@felte/solid": "^0.1.8",
-    "@linaria/core": "^3.0.0-beta.4",
-    "date-fns": "^2.23.0",
-    "focus-trap": "^6.6.0",
+    "@linaria/core": "^3.0.0-beta.13",
+    "date-fns": "^2.24.0",
+    "focus-trap": "^6.6.1",
     "polished": "^4.1.3",
-    "solid-js": "^1.0.5",
+    "solid-js": "^1.1.4",
     "solid-transition-group": "^0.0.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@linaria/rollup": "^3.0.0-beta.7",
-    "@linaria/shaker": "^3.0.0-beta.10",
-    "@linaria/stylelint": "^3.0.0-beta.7",
-    "@types/chrome": "^0.0.148",
-    "@types/node": "^15.14.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
+    "@babel/core": "^7.15.5",
+    "@linaria/rollup": "^3.0.0-beta.13",
+    "@linaria/shaker": "^3.0.0-beta.13",
+    "@linaria/stylelint": "^3.0.0-beta.13",
+    "@types/chrome": "^0.0.157",
+    "@types/node": "^16.9.2",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^7.31.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-config-standard-with-typescript": "^20.0.0",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.3.2",
+    "prettier": "^2.4.1",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-prettier": "^1.2.0",
     "stylis": "^3",
-    "typescript": "^4.3.5",
-    "vite": "^2.4.4",
-    "vite-plugin-html": "^2.0.7",
-    "vite-plugin-solid": "^2.0.1"
+    "typescript": "^4.4.3",
+    "vite": "^2.5.8",
+    "vite-plugin-html": "^2.1.0",
+    "vite-plugin-solid": "^2.0.3"
   },
   "optionalDependencies": {
-    "eslint-import-resolver-node": "^0.3.4"
-  }
+    "eslint-import-resolver-node": "^0.3.6"
+  },
+  "packageManager": "yarn@3.1.0-rc.5"
 }
