--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "packageManager": "yarn@3.2.0-rc.15",
+  "packageManager": "yarn@3.2.0",
   "scripts": {
     "dev": "vite",
     "build": "NODE_ENV=production vite build",
@@ -18,26 +18,26 @@
     "*.css"
   ],
   "dependencies": {
-    "@felte/solid": "^1.0.0",
+    "@felte/solid": "^1.1.4",
     "@linaria/core": "^3.0.0-beta.15",
     "date-fns": "^2.28.0",
     "focus-trap": "^6.7.3",
     "polished": "^4.1.4",
-    "solid-js": "^1.3.7",
+    "solid-js": "^1.3.13",
     "solid-transition-group": "^0.0.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.2",
+    "@babel/core": "^7.17.8",
     "@linaria/rollup": "^3.0.0-beta.17",
     "@linaria/shaker": "^3.0.0-beta.17",
     "@linaria/stylelint": "^3.0.0-beta.17",
-    "@types/chrome": "^0.0.178",
-    "@types/node": "^16.11.24",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
+    "@types/chrome": "^0.0.180",
+    "@types/node": "^16.11.26",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.25.4",
@@ -45,16 +45,16 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.2.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.0",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-prettier": "^1.2.0",
     "stylis": "^3",
-    "typescript": "^4.5.5",
-    "vite": "^2.8.1",
-    "vite-plugin-html": "^3.0.6",
-    "vite-plugin-solid": "^2.2.5"
+    "typescript": "^4.6.2",
+    "vite": "^2.8.6",
+    "vite-plugin-html": "^3.2.0",
+    "vite-plugin-solid": "^2.2.6"
   },
   "optionalDependencies": {
     "eslint-import-resolver-node": "^0.3.6"
