--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "packageManager": "yarn@3.2.0",
+  "packageManager": "yarn@3.2.1",
   "scripts": {
     "dev": "vite",
     "build": "NODE_ENV=production vite build",
@@ -18,41 +18,41 @@
     "*.css"
   ],
   "dependencies": {
-    "@felte/solid": "^1.1.4",
-    "@linaria/core": "^3.0.0-beta.15",
+    "@felte/solid": "^1.2.2",
+    "@linaria/core": "^3.0.0-beta.18",
     "date-fns": "^2.28.0",
-    "focus-trap": "^6.7.3",
-    "polished": "^4.1.4",
-    "solid-js": "^1.3.13",
-    "solid-transition-group": "^0.0.8"
+    "focus-trap": "^6.9.3",
+    "polished": "^4.2.2",
+    "solid-js": "^1.4.3",
+    "solid-transition-group": "^0.0.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@linaria/rollup": "^3.0.0-beta.17",
-    "@linaria/shaker": "^3.0.0-beta.17",
-    "@linaria/stylelint": "^3.0.0-beta.17",
-    "@types/chrome": "^0.0.180",
-    "@types/node": "^16.11.26",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
+    "@babel/core": "^7.18.2",
+    "@linaria/rollup": "^3.0.0-beta.18",
+    "@linaria/shaker": "^3.0.0-beta.18",
+    "@linaria/stylelint": "^3.0.0-beta.18",
+    "@types/chrome": "^0.0.188",
+    "@types/node": "^16.11.36",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-config-standard-with-typescript": "^21.0.1",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-config-standard-with-typescript": "https://github.com/khmm12/eslint-config-standard-with-typescript.git#after-life",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-promise": "^6.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.0",
+    "prettier": "^2.6.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-prettier": "^1.2.0",
     "stylis": "^3",
-    "typescript": "^4.6.2",
-    "vite": "^2.8.6",
+    "typescript": "^4.7.2",
+    "vite": "^2.9.9",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-solid": "^2.2.6"
   },
