--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "typescript": "^4.7.2",
     "vite": "^2.9.9",
     "vite-plugin-html": "^3.2.0",
-    "vite-plugin-solid": "^2.2.6"
+    "vite-plugin-solid": "^2.2.6",
+    "vite-plugin-static-copy": "^0.5.0"
   },
   "optionalDependencies": {
     "eslint-import-resolver-node": "^0.3.6"
