--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,11 +1,13 @@
 {
-  "name": "Minimal Chrome Tab",
+  "name": "__MSG_app_name__",
+  "description": "__MSG_app_description__",
+  "manifest_version": 3,
   "version": "2.0.0",
+  "default_locale": "en",
   "chrome_url_overrides": {
     "newtab": "index.html"
   },
   "permissions": [
     "storage"
-  ],
-  "manifest_version": 3
+  ]
 }
