feat: big improvements and tests
- cover codebase with unit tests;
- fix opacity effect on the app mount;
- new settings icon;
- restyle settings dialog;
- remove stylelint;
- many code style changes;
- preload font and use font blocker strategy to reduce app loading time and avoid of content blink.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,3 +28,16 @@ jobs:
         run: yarn install --immutable
       - name: Check types
         run: yarn typecheck
+  tests:
+    name: Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16.x'
+      - name: Install dependencies
+        run: yarn install --immutable
+      - name: Run tests
+        run: yarn unit-tests
