--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,15 +1,11 @@
-nodeLinker: pnp
-
 enableGlobalCache: true
 
+nodeLinker: pnp
+
 packageExtensions:
-  "@linaria/babel-preset@*":
-    dependencies:
-      "@babel/plugin-proposal-export-namespace-from": "*"
-      "@babel/plugin-transform-modules-commonjs": "*"
-  "@linaria/stylelint@*":
+  "@types/testing-library__user-event@*":
     peerDependencies:
-      "@babel/core": "*"
+      "@testing-library/dom": "*"
   babel-plugin-jsx-dom-expressions@*:
     peerDependencies:
       "@babel/core": "*"
@@ -20,5 +16,7 @@ packageExtensions:
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: "@yarnpkg/plugin-interactive-tools"
+  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
+    spec: "@yarnpkg/plugin-typescript"
 
 yarnPath: .yarn/releases/yarn-3.2.1.cjs
