--- a/package.json
+++ b/package.json
@@ -7,58 +7,63 @@
   "scripts": {
     "dev": "vite",
     "build": "NODE_ENV=production vite build",
-    "test": "run-p \"lint:*\" typecheck --aggregate-output",
-    "lint": "run-p \"lint:*\" --aggregate-output",
-    "lint:eslint": "eslint --ext .js,.ts,.tsx src",
-    "lint:stylelint": "stylelint \"src/**/*.{css,ts,tsx}\"",
+    "test": "run-p --aggregate-output lint typecheck \"unit-tests --run --silent\"",
+    "unit-tests": "vitest",
+    "lint": "eslint --ext .js,.ts,.tsx src",
     "typecheck": "tsc --noEmit --pretty --project ."
   },
   "sideEffects": [
-    "src/components/Layout/components/Fonts/*",
+    "src/components/Fonts/*",
     "*.css"
   ],
   "dependencies": {
+    "@babel/runtime": "^7.18.3",
     "@felte/solid": "^1.2.2",
-    "@linaria/core": "^3.0.0-beta.19",
+    "@linaria/core": "^3.0.0-beta.20",
     "date-fns": "^2.28.0",
     "focus-trap": "^6.9.3",
     "polished": "^4.2.2",
+    "remeda": "^0.0.35",
     "solid-js": "^1.4.3",
     "solid-transition-group": "^0.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
-    "@linaria/rollup": "^3.0.0-beta.19",
-    "@linaria/shaker": "^3.0.0-beta.19",
-    "@linaria/stylelint": "^3.0.0-beta.19",
-    "@types/chrome": "^0.0.188",
-    "@types/node": "^16.11.36",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
+    "@babel/plugin-syntax-typescript": "^7.17.12",
+    "@babel/preset-typescript": "^7.17.12",
+    "@linaria/babel-preset": "^3.0.0-beta.20",
+    "@linaria/rollup": "^3.0.0-beta.20",
+    "@linaria/shaker": "^3.0.0-beta.20",
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/user-event": "^14.2.0",
+    "@types/chrome": "^0.0.190",
+    "@types/node": "^16.11.39",
+    "@types/testing-library__jest-dom": "^5.14.3",
+    "@types/testing-library__user-event": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "browserslist-to-esbuild": "^1.1.1",
-    "eslint": "^8.16.0",
+    "c8": "^7.11.3",
+    "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-config-standard-with-typescript": "https://github.com/khmm12/eslint-config-standard-with-typescript.git#after-life",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-n": "^15.2.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "jsdom": "^19.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-prettier": "^1.2.0",
     "stylis": "^3",
-    "typescript": "^4.7.2",
-    "vite": "^2.9.9",
+    "typescript": "^4.7.3",
+    "vite": "^2.9.10",
+    "vite-plugin-babel": "^1.0.0",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-solid": "^2.2.6",
-    "vite-plugin-static-copy": "^0.5.0"
-  },
-  "optionalDependencies": {
-    "eslint-import-resolver-node": "^0.3.6"
+    "vite-plugin-static-copy": "^0.5.0",
+    "vitest": "^0.14.1"
   }
 }
