--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "isolatedModules": false,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "lib": ["esnext", "dom"],
+    "lib": ["esnext", "dom", "dom.iterable"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -16,10 +16,11 @@
     "strict": true,
     "target": "esnext",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@test/*": ["test-support/*"]
     },
     "types": ["chrome", "vite/client"]
   },
-  "include": ["typings", "src"],
+  "include": ["typings", "src", "test-support/env.d.ts"],
   "exclude": ["./dist"]
 }
