style: run prettier

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,7 +6,5 @@
   "chrome_url_overrides": {
     "newtab": "index.html"
   },
-  "permissions": [
-    "storage"
-  ]
+  "permissions": ["storage"]
 }
