--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "jsdom": "^20.0.0",
+    "mq-polyfill": "^1.1.8",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "stylis": "^3",
