chore: upgrade packages

--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "minimal-chrome-tab",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
-  "packageManager": "yarn@3.2.1",
+  "packageManager": "yarn@3.2.4",
   "scripts": {
     "dev": "vite",
     "build": "NODE_ENV=production vite build",
@@ -13,58 +12,60 @@
     "typecheck": "tsc --noEmit --pretty --project ."
   },
   "sideEffects": [
-    "src/components/GlobalStyles/*",
+    "src/index.tsx",
+    "src/localize-html.ts",
+    "src/components/GlobalStyles/**",
     "*.css"
   ],
   "dependencies": {
-    "@babel/runtime": "^7.18.3",
-    "@felte/solid": "^1.2.2",
-    "@linaria/core": "^3.0.0-beta.21",
-    "date-fns": "^2.28.0",
-    "focus-trap": "^6.9.4",
+    "@babel/runtime": "^7.20.1",
+    "@felte/solid": "^1.2.6",
+    "@linaria/core": "^4.2.2",
+    "date-fns": "^2.29.3",
+    "focus-trap": "^7.0.0",
     "polished": "^4.2.2",
-    "remeda": "^0.0.35",
-    "solid-js": "^1.4.4",
-    "solid-transition-group": "^0.0.10"
+    "remeda": "^1.2.0",
+    "solid-js": "^1.6.1",
+    "solid-transition-group": "^0.0.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.5",
-    "@babel/plugin-syntax-typescript": "^7.17.12",
-    "@babel/preset-typescript": "^7.17.12",
-    "@linaria/babel-preset": "^3.0.0-beta.21",
-    "@linaria/rollup": "^3.0.0-beta.21",
-    "@linaria/shaker": "^3.0.0-beta.21",
-    "@testing-library/dom": "^8.14.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/user-event": "^14.2.1",
-    "@types/chrome": "^0.0.190",
-    "@types/node": "^16.11.41",
-    "@types/testing-library__jest-dom": "^5.14.4",
+    "@babel/core": "^7.20.2",
+    "@babel/plugin-syntax-typescript": "^7.20.0",
+    "@babel/preset-typescript": "^7.18.6",
+    "@linaria/babel-preset": "^4.3.0",
+    "@linaria/rollup": "^4.2.2",
+    "@linaria/shaker": "^4.2.4",
+    "@testing-library/dom": "^8.19.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/chrome": "^0.0.200",
+    "@types/node": "^16.18.3",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@types/testing-library__user-event": "^4.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
     "babel-plugin-module-resolver": "^4.1.0",
-    "browserslist-to-esbuild": "^1.1.1",
-    "c8": "^7.11.3",
-    "eslint": "^8.18.0",
+    "browserslist-to-esbuild": "^1.2.0",
+    "c8": "^7.12.0",
+    "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-config-standard-with-typescript": "https://github.com/khmm12/eslint-config-standard-with-typescript.git#after-life",
+    "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.3",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "jsdom": "^20.0.0",
+    "eslint-plugin-n": "^15.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "jsdom": "^20.0.2",
     "mq-polyfill": "^1.1.8",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "stylis": "^3",
-    "typescript": "^4.7.4",
-    "vite": "^2.9.12",
-    "vite-plugin-babel": "^1.1.0",
+    "typescript": "^4.8.4",
+    "vite": "^3.2.3",
+    "vite-plugin-babel": "^1.1.2",
     "vite-plugin-html": "^3.2.0",
-    "vite-plugin-solid": "^2.2.6",
-    "vite-plugin-static-copy": "^0.5.1",
-    "vitest": "^0.15.1"
+    "vite-plugin-solid": "^2.4.0",
+    "vite-plugin-static-copy": "^0.11.1",
+    "vitest": "^0.25.1"
   }
 }
