fix: coverage report

--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "@types/testing-library__user-event": "^4.2.0",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
+    "@vitest/coverage-c8": "^0.25.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "browserslist-to-esbuild": "^1.2.0",
-    "c8": "^7.12.0",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
