chore: upgrade dependencies

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -6,10 +6,17 @@ packageExtensions:
   "@types/testing-library__user-event@*":
     peerDependencies:
       "@testing-library/dom": "*"
+  "@linaria/rollup@*":
+    peerDependencies:
+      "vite": "*"
+    peerDependenciesMeta:
+      "vite":
+        optional: true
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: "@yarnpkg/plugin-interactive-tools"
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: "@yarnpkg/plugin-typescript"
 
-yarnPath: .yarn/releases/yarn-3.2.4.cjs
+yarnPath: .yarn/releases/yarn-3.3.0.cjs
