--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@babel/plugin-syntax-typescript": "^7.20.0",
     "@babel/preset-typescript": "^7.18.6",
     "@linaria/babel-preset": "^4.3.1",
-    "@linaria/rollup": "^4.3.0",
     "@linaria/shaker": "^4.2.5",
+    "@linaria/vite": "^4.2.3",
     "@testing-library/dom": "^8.19.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
