--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,24 @@
-dist
+# Package manager
 node_modules
-.linaria-cache
+
+# Build
+dist
+
+# OS
 .DS_Store
+
+# Dev
 .vscode
 .env
 
+# Yarn
 .yarn/*
-!.yarn/releases
+!.yarn/patches
 !.yarn/plugins
+!.yarn/releases
 !.yarn/sdks
 !.yarn/versions
 .pnp.*
 
+# Tests
 coverage
