--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "minimal-chrome-tab",
   "version": "1.0.0",
   "license": "MIT",
-  "packageManager": "yarn@3.3.0",
+  "packageManager": "yarn@3.4.1",
   "type": "module",
+  "engine": {
+    "node": "^16 || ^18"
+  },
   "scripts": {
     "dev": "vite",
     "build": "NODE_ENV=production vite build",
@@ -19,54 +22,50 @@
     "*.css"
   ],
   "dependencies": {
-    "@babel/runtime": "^7.20.6",
-    "@felte/solid": "^1.2.6",
-    "@linaria/core": "^4.2.3",
+    "@felte/solid": "^1.2.7",
+    "@linaria/core": "^4.2.8",
     "date-fns": "^2.29.3",
-    "focus-trap": "^7.2.0",
+    "focus-trap": "^7.3.1",
     "polished": "^4.2.2",
-    "remeda": "^1.3.0",
-    "solid-js": "^1.6.2",
-    "solid-transition-group": "^0.0.12"
+    "remeda": "^1.6.2",
+    "solid-js": "^1.6.11",
+    "solid-transition-group": "^0.0.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
-    "@babel/plugin-syntax-typescript": "^7.20.0",
-    "@babel/preset-typescript": "^7.18.6",
-    "@linaria/babel-preset": "^4.3.1",
-    "@linaria/shaker": "^4.2.5",
-    "@linaria/vite": "^4.2.3",
-    "@testing-library/dom": "^8.19.0",
+    "@linaria/vite": "^4.2.9",
+    "@solidjs/testing-library": "^0.6.1",
+    "@testing-library/dom": "^8.20.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
-    "@types/chrome": "^0.0.203",
-    "@types/node": "^16.18.4",
+    "@types/chrome": "^0.0.217",
+    "@types/node": "^16.18.12",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/testing-library__user-event": "^4.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "@vitest/coverage-c8": "^0.25.3",
-    "babel-plugin-module-resolver": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "@vitest/coverage-c8": "^0.28.5",
     "browserslist-to-esbuild": "^1.2.0",
-    "eslint": "^8.29.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.5.1",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
-    "jsdom": "^20.0.3",
+    "jsdom": "^21.1.0",
     "mq-polyfill": "^1.1.8",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.0",
+    "prettier": "^2.8.4",
     "stylis": "^3",
-    "typescript": "^4.9.3",
-    "vite": "^3.2.4",
-    "vite-plugin-babel": "^1.1.2",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.4",
     "vite-plugin-html": "^3.2.0",
-    "vite-plugin-solid": "^2.4.0",
-    "vite-plugin-static-copy": "^0.12.0",
-    "vitest": "^0.25.3"
+    "vite-plugin-solid": "^2.5.0",
+    "vite-plugin-static-copy": "^0.13.0",
+    "vitest": "^0.28.5"
+  },
+  "resolutions": {
+    "solid-transition-group@^0.0.13": "patch:solid-transition-group@npm%3A0.0.13#./.yarn/patches/solid-transition-group-npm-0.0.13-8040214c3c.patch"
   }
 }
