chore: upgrade packages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "minimal-chrome-tab",
   "version": "1.0.0",
   "license": "MIT",
-  "packageManager": "yarn@3.4.1",
+  "packageManager": "yarn@3.5.0",
   "type": "module",
   "engine": {
     "node": "^16 || ^18"
@@ -27,43 +27,43 @@
     "date-fns": "^2.29.3",
     "focus-trap": "^7.4.0",
     "polished": "^4.2.2",
-    "remeda": "^1.8.1",
-    "solid-js": "^1.6.13",
-    "solid-transition-group": "^0.0.13"
+    "remeda": "^1.9.4",
+    "solid-js": "1.7.0",
+    "solid-transition-group": "0.2.2"
   },
   "devDependencies": {
     "@linaria/vite": "^4.2.9",
-    "@solidjs/testing-library": "^0.6.1",
-    "@testing-library/dom": "^9.0.1",
+    "@solidjs/testing-library": "0.7.0",
+    "@testing-library/dom": "9.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
-    "@types/chrome": "^0.0.221",
-    "@types/node": "^16.18.14",
+    "@types/chrome": "^0.0.227",
+    "@types/node": "^18.15.11",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/testing-library__user-event": "^4.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "@vitest/coverage-c8": "^0.29.2",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "@vitest/coverage-c8": "^0.29.8",
     "browserslist-to-esbuild": "^1.2.0",
-    "eslint": "^8.35.0",
-    "eslint-config-prettier": "^8.7.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
-    "jsdom": "^21.1.0",
+    "jsdom": "^21.1.1",
     "mq-polyfill": "^1.1.8",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.7",
     "stylis": "^3",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.4",
+    "typescript": "^5.0.3",
+    "vite": "^4.2.1",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-solid": "^2.6.1",
     "vite-plugin-static-copy": "^0.13.1",
-    "vitest": "^0.29.2"
+    "vitest": "^0.29.8"
   },
   "resolutions": {
     "solid-transition-group@^0.0.13": "patch:solid-transition-group@npm%3A0.0.13#./.yarn/patches/solid-transition-group-npm-0.0.13-8040214c3c.patch"
