chore: upgrade packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,8 @@
     "types": ["chrome", "vite/client"]
   },
   "include": ["typings", "src", "test-support/env.d.ts"],
-  "exclude": ["./dist"]
+  "exclude": ["./dist"],
+  "references": [
+    { "path": "./tsconfig.node.json" }
+  ]
 }
