--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "minimal-chrome-tab",
   "version": "1.0.0",
   "license": "MIT",
-  "packageManager": "yarn@3.5.0",
+  "packageManager": "yarn@3.6.4",
   "type": "module",
   "engine": {
     "node": "^16 || ^18"
   },
   "scripts": {
     "dev": "vite",
-    "build": "NODE_ENV=production vite build",
+    "build": "vite build",
     "test": "run-p --aggregate-output lint typecheck \"unit-tests --run --silent\"",
     "unit-tests": "vitest",
     "lint": "eslint --ext .js,.ts,.tsx src",
@@ -22,50 +22,50 @@
     "*.css"
   ],
   "dependencies": {
-    "@felte/solid": "^1.2.7",
-    "@linaria/core": "^4.2.8",
-    "date-fns": "^2.29.3",
-    "focus-trap": "^7.4.0",
+    "@felte/solid": "^1.2.11",
+    "@linaria/core": "^5.0.2",
+    "date-fns": "^2.30.0",
+    "focus-trap": "^7.5.4",
     "polished": "^4.2.2",
-    "remeda": "^1.12.0",
-    "solid-js": "1.7.3",
-    "solid-transition-group": "0.2.2"
+    "remeda": "^1.27.1",
+    "solid-js": "1.8.1",
+    "solid-transition-group": "0.2.3"
   },
   "devDependencies": {
-    "@linaria/vite": "^4.2.9",
-    "@solidjs/testing-library": "0.7.0",
-    "@testing-library/dom": "9.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/chrome": "^0.0.228",
-    "@types/node": "^18.15.11",
-    "@types/testing-library__jest-dom": "^5.14.5",
+    "@linaria/vite": "^5.0.3",
+    "@solidjs/router": "^0.8.3",
+    "@solidjs/testing-library": "0.8.4",
+    "@testing-library/dom": "9.3.3",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/chrome": "^0.0.246",
+    "@types/node": "^18.18.5",
     "@types/testing-library__user-event": "^4.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitest/coverage-c8": "^0.30.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "@vitest/coverage-v8": "^0.34.6",
     "browserslist-to-esbuild": "^1.2.0",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-config-standard-with-typescript": "^34.0.1",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-config-standard-with-typescript": "^39.1.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.2.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
-    "jsdom": "^21.1.1",
+    "jsdom": "^22.1.0",
     "mq-polyfill": "^1.1.8",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.7",
+    "prettier": "^3.0.3",
     "stylis": "^3",
-    "typescript": "^5.0.4",
-    "vite": "^4.2.1",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.11",
     "vite-plugin-html": "^3.2.0",
-    "vite-plugin-solid": "^2.7.0",
-    "vite-plugin-static-copy": "^0.13.1",
-    "vitest": "^0.30.0"
+    "vite-plugin-solid": "2.7.0",
+    "vite-plugin-static-copy": "^0.17.0",
+    "vitest": "^0.34.6"
   },
   "resolutions": {
-    "solid-transition-group@0.2.2": "patch:solid-transition-group@npm%3A0.2.2#./.yarn/patches/solid-transition-group-npm-0.2.2-a3612433c4.patch"
+    "solid-transition-group@0.2.3": "patch:solid-transition-group@npm%3A0.2.3#./.yarn/patches/solid-transition-group-npm-0.2.3-b5c9fbd0f8.patch"
   }
 }
