--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/user-event": "^14.5.1",
     "@types/chrome": "^0.0.246",
+    "@types/eslint": "^8.44.4",
     "@types/node": "^18.18.5",
     "@types/testing-library__user-event": "^4.2.0",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
@@ -53,8 +54,7 @@
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
-    "jsdom": "^22.1.0",
-    "mq-polyfill": "^1.1.8",
+    "happy-dom": "^12.9.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "stylis": "^3",
