--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
     "*.css"
   ],
   "dependencies": {
-    "@felte/solid": "^1.2.11",
     "@linaria/core": "^5.0.2",
+    "@modular-forms/solid": "^0.20.0",
+    "@total-typescript/ts-reset": "^0.5.1",
     "date-fns": "^2.30.0",
     "focus-trap": "^7.5.4",
     "polished": "^4.2.2",
     "remeda": "^1.27.1",
     "solid-js": "1.8.1",
-    "solid-transition-group": "0.2.3"
+    "solid-transition-group": "0.2.3",
+    "type-fest": "^4.4.0"
   },
   "devDependencies": {
     "@linaria/vite": "^5.0.3",
@@ -60,6 +62,7 @@
     "stylis": "^3",
     "typescript": "^5.2.2",
     "vite": "^4.4.11",
+    "vite-bundle-visualizer": "^0.10.0",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-solid": "2.7.0",
     "vite-plugin-static-copy": "^0.17.0",
