chore: upgrade packages and switch to pnpm from yarn
- upgrade packages;
- switch to pnpm from yarn, pnpm works in pnpm mode without any issue out of box;
- bump required nodejs version;
- switch to eslint-cofig-love, eslint-config-standard is deprecated.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "jsxImportSource": "solid-js",
     "lib": ["esnext", "dom", "dom.iterable"],
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "noEmit": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
