--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "minimal-chrome-tab",
   "version": "1.0.0",
   "license": "MIT",
-  "packageManager": "yarn@3.6.4",
   "type": "module",
   "engine": {
-    "node": "^16 || ^18"
+    "node": "^18 || ^20"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "test": "run-p --aggregate-output lint typecheck \"unit-tests --run --silent\"",
     "unit-tests": "vitest",
-    "lint": "eslint --ext .js,.ts,.tsx src",
+    "lint": "eslint .",
     "typecheck": "tsc --noEmit --pretty --project ."
   },
   "sideEffects": [
@@ -22,53 +21,53 @@
     "*.css"
   ],
   "dependencies": {
-    "@linaria/core": "^5.0.2",
-    "@modular-forms/solid": "^0.20.0",
+    "@linaria/core": "^6.2.0",
+    "@modular-forms/solid": "^0.21.0",
     "@total-typescript/ts-reset": "^0.5.1",
-    "date-fns": "^2.30.0",
+    "date-fns": "^3.6.0",
     "focus-trap": "^7.5.4",
-    "polished": "^4.2.2",
-    "remeda": "^1.27.1",
-    "solid-js": "1.8.1",
-    "solid-transition-group": "0.2.3",
-    "type-fest": "^4.4.0"
+    "polished": "^4.3.1",
+    "remeda": "^2.2.0",
+    "solid-js": "1.8.17",
+    "solid-transition-group": "^0.2.3",
+    "type-fest": "^4.20.1"
   },
   "devDependencies": {
-    "@linaria/vite": "^5.0.3",
-    "@solidjs/router": "^0.8.3",
-    "@solidjs/testing-library": "0.8.4",
-    "@testing-library/dom": "9.3.3",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/chrome": "^0.0.246",
-    "@types/eslint": "^8.44.4",
-    "@types/node": "^18.18.5",
-    "@types/testing-library__user-event": "^4.2.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
-    "@vitest/coverage-v8": "^0.34.6",
-    "browserslist-to-esbuild": "^1.2.0",
-    "eslint": "^8.51.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-config-standard-with-typescript": "^39.1.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-n": "^16.2.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "happy-dom": "^12.9.1",
+    "@linaria/vite": "^5.0.4",
+    "@solidjs/testing-library": "0.8.8",
+    "@testing-library/dom": "10.1.0",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/chrome": "^0.0.268",
+    "@types/node": "^20.14.6",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@wyw-in-js/vite": "^0.5.3",
+    "browserslist": "^4.23.1",
+    "browserslist-to-esbuild": "^2.1.1",
+    "eslint": "8.57.0",
+    "eslint-config-love": "^53.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.6.0",
+    "happy-dom": "^14.12.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.3",
+    "prettier": "^3.3.2",
     "stylis": "^3",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.11",
-    "vite-bundle-visualizer": "^0.10.0",
-    "vite-plugin-html": "^3.2.0",
-    "vite-plugin-solid": "2.7.0",
-    "vite-plugin-static-copy": "^0.17.0",
-    "vitest": "^0.34.6"
+    "typescript": "5.4.5",
+    "typescript-eslint": "^7.13.1",
+    "vite": "^5.3.1",
+    "vite-bundle-visualizer": "^1.2.1",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-solid": "2.10.2",
+    "vite-plugin-static-copy": "^1.0.5",
+    "vitest": "^1.6.0"
   },
-  "resolutions": {
-    "solid-transition-group@0.2.3": "patch:solid-transition-group@npm%3A0.2.3#./.yarn/patches/solid-transition-group-npm-0.2.3-b5c9fbd0f8.patch"
+  "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a",
+  "pnpm": {
+    "patchedDependencies": {
+      "solid-transition-group@0.2.3": "patches/solid-transition-group@0.2.3.patch"
+    }
   }
 }
