--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,7 +7,8 @@
   },
   "include": [
     "vite.config.ts",
-    ".eslintrc.cjs",
+    "eslint.config.mjs",
+    "prettier.config.mjs",
     "lib"
   ]
 }
