--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^20.14.6",
     "@vitest/coverage-v8": "^1.6.0",
     "@wyw-in-js/vite": "^0.5.3",
+    "autoprefixer": "^10.4.19",
     "browserslist": "^4.23.1",
     "browserslist-to-esbuild": "^2.1.1",
     "eslint": "8.57.0",
