--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "solid-devtools": "^0.30.1",
     "typescript": "~5.5.4",
     "typescript-eslint": "^8.6.0",
     "vite": "^5.4.6",
