--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,7 +1,9 @@
 name: Nightly
 on:
-  push:
-    branches: ['main']
+  workflow_run:
+    workflows: [Test]
+    types: [completed]
+    branches: [main]
 jobs:
   nighly:
     runs-on: ubuntu-latest
