infra: fix nightly release body message

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -37,7 +37,7 @@ jobs:
           tag_name: nightly
           name: 'Nightly'
           body: |
-            Nightly release $$.
+            The bleeding edge release.
           prerelease: true
           files: |
             ./minimal-chrome-tab.zip
