--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "sideEffects": [
     "src/index.tsx",
-    "src/localize-html.ts",
+    "src/boot/**",
     "src/components/GlobalStyles/**",
     "*.css"
   ],
@@ -33,7 +33,7 @@
     "solid-js": "1.8.22",
     "solid-transition-group": "^0.2.3",
     "type-fest": "^4.26.1",
-    "valibot": "^0.42.0"
+    "valibot": "^0.42.1"
   },
   "devDependencies": {
     "@pandacss/dev": "^0.46.1",
