--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "prepare": "panda codegen --clean",
     "dev": "vite",
     "build": "vite build",
-    "test": "run-p --aggregate-output lint typecheck:* \"unit-tests --run --silent\"",
-    "unit-tests": "vitest",
     "lint": "eslint .",
-    "typecheck": "run-p --aggregate-output typecheck:app typecheck:node",
+    "test": "redrun -p lint typecheck:* test:*",
+    "test:unit": "vitest --run --silent",
+    "typecheck": "redrun -p typecheck:*",
     "typecheck:app": "tsc --noEmit --pretty --project tsconfig.app.json",
     "typecheck:node": "tsc --noEmit --pretty --project tsconfig.node.json"
   },
@@ -33,44 +33,45 @@
     "solid-js": "1.9.3",
     "solid-transition-group": "^0.2.3",
     "type-fest": "^4.26.1",
-    "valibot": "1.0.0-beta.0"
+    "valibot": "1.0.0-beta.3"
   },
   "devDependencies": {
-    "@pandacss/dev": "^0.47.0",
+    "@pandacss/dev": "^0.47.1",
     "@solidjs/testing-library": "0.8.10",
     "@testing-library/dom": "10.4.0",
-    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.5.2",
     "@tsconfig/node20": "^20.1.4",
     "@tsconfig/recommended": "^1.0.8",
     "@tsconfig/strictest": "^2.0.5",
-    "@types/chrome": "^0.0.279",
-    "@types/node": "^20.17.1",
-    "@vitest/coverage-v8": "^2.1.3",
+    "@types/chrome": "^0.0.280",
+    "@types/node": "^20.17.6",
+    "@vitest/coverage-v8": "^2.1.4",
     "autoprefixer": "^10.4.20",
     "browserslist": "^4.24.2",
     "browserslist-to-esbuild": "^2.1.1",
-    "eslint": "9.13.0",
-    "eslint-config-love": "^96.0.0",
+    "eslint": "9.14.0",
+    "eslint-config-love": "^97.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "globals": "^15.11.0",
-    "happy-dom": "^15.7.4",
+    "globals": "^15.12.0",
+    "happy-dom": "^15.10.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "redrun": "^11.0.5",
     "solid-devtools": "^0.30.1",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.11.0",
+    "typescript-eslint": "^8.13.0",
     "vite": "^5.4.10",
     "vite-bundle-visualizer": "^1.2.1",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-solid": "2.10.2",
     "vite-plugin-static-copy": "^2.0.0",
-    "vitest": "^2.1.3"
+    "vitest": "^2.1.4"
   },
-  "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228",
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee",
   "pnpm": {
     "patchedDependencies": {
       "solid-transition-group@0.2.3": "patches/solid-transition-group@0.2.3.patch"
