ci: use relative assets path for the demo page

--- a/.github/workflows/deploy-demo-page.yml
+++ b/.github/workflows/deploy-demo-page.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Build
-        run: pnpm build
+        run: pnpm build --base=./
       - name: Upload static files as artifact
         id: deployment
         uses: actions/upload-pages-artifact@v3
