ci: automatically deploy demo page after tests passed against main branch

--- a/.github/workflows/deploy-demo-page.yml
+++ b/.github/workflows/deploy-demo-page.yml
@@ -1,6 +1,9 @@
 name: Deploy demo page
 on:
-  workflow_dispatch:
+  workflow_run:
+    workflows: [Test]
+    types: [completed]
+    branches: [main]
 jobs:
   build:
     runs-on: ubuntu-latest
